Add integration tests for checking hard dependencies
The test is meant to prevent a dependency to accidentally leak into
Import-Package in MANIFEST.MF

This changeset introduces a new test category: IntegrationTest
Tests belonging to this category are executed after packaging - with
a final JAR (including shading and all that) on a classpath.

Fixes